Aggiunte le classi Element, per gli elementi della toDoList, e ListElement, composto da una lista di Element

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(toDoList)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(toDoList main.cpp)
+add_executable(toDoList main.cpp Element.cpp Element.h ListElement.cpp ListElement.h)
